--- a/package.json
+++ b/package.json
@@ -7,7 +7,16 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.20.0",
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "require-all": "^3.0.0"
+  },
+  "scripts": {
+    "dev": "nodemon app.js",
+    "start": "node app.js"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
