--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "require-all": "^3.0.0"
+    "require-all": "^3.0.0",
+    "unzip": "^0.1.11"
   },
   "scripts": {
     "dev": "nodemon app.js",
