--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "require-all": "^3.0.0",
-    "unzip": "^0.1.11"
+    "unzipper": "^0.10.11"
   },
   "scripts": {
     "dev": "nodemon app.js",
